[package]
name = "nine_saves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
directories = "5.0.1"
iced = { version = "0.12.1", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
libaes = "0.7.0"
regex = "1.10.4"
serde = "1.0.203"
sonic-rs = "0.3.6"
