[package]
name = "nine_saves"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/semilin/nine_saves"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
directories = "5.0.1"
iced = { version = "0.12.1", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
libaes = "0.7.0"
notify-rust = "4.11.0"
regex = "1.10.4"
serde = "1.0.203"
sonic-rs = "0.3.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
